# wig

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  wig.g4
Wig/src/: main.cpp
src/: main.cpp  tokens.hpp
src/ast/: blocks.hpp  declarations.hpp  expressions.hpp  statements.hpp  types.hpp
src/cli/: parser.cpp  parser.hpp
